# VoxelGIProject

./: CMakeLists.txt  CMakeSettings.json  README.md  Readme.txt
Dependancies/GLFW/: glfw3.h
Dependancies/assimp/: mesh.h  scene.h
Models/: Lucy.mtl
Models/CornellBox/: CornellBox-Empty-RG.mtl  CornellBox-Original.mtl  CornellBox-Sphere.mtl
Shaders/: DefaultDeferredFrag.frag  DefaultDeferredFragTexture.frag  DummyVert.vert  Globals.glsl  PhongVertexColor.vert  PlainVertNormalMap.vert  SkyboxFragDeferred.frag  SkyboxVert.vert
Shaders/PBR/: PBRFunctions.glsl
Shaders/VoxelBasedGI/: ConeTracingFunctions.glsl  ConeTracingGlobals.glsl  Voxelization.frag  Voxelization.geom  Voxelization.vert  VoxelizationDebugRenderer.frag  VoxelizationDebugRenderer.geom  VoxelizationDebugRenderer.vert  VoxelizationTexture.frag
Shaders/VoxelBasedGI/ConeTracing/: ConeTracingDeferred.frag  ConeTracingDeferred.vert
Shaders/VoxelBasedGI/LightBounce/: ComputeLightBounce.comp
VoxelBasedGI/includes/: ApplicationEvents.h  ArcBall.h  Camera.h  DataHolder.h  DeferredRenderer.h  Defs.h  GeometryBatch.h  GeometryManager.h  HighResClock.h  InputManager.h  InputSignals.h  InternalStates.h  LightManager.h  LightStructs.h  Material.h  MaterialUtilities.h  MemoryUtilities.h  Mesh3D.h  ModelLoader.h  Object.h  Program.h  RenderBatch.h  Renderer.h  Scene.h  Shader.h  ShapeBaseArrays.h  Shapes.h  TextReader.h  TextureManager.h  TextureReader.h  UniformBuffer.h  VertexAttribPointer.h  VertexStructs.h  VoxelBasedGIApp.h  VoxelBasedGUI.h  WindowManager.h  stb_image.h  stdafx.h
VoxelBasedGI/includes/VoxelGI/: VoxelManager.h
VoxelBasedGI/includes/boost/: any.hpp  array.hpp  bimap.hpp  bind.hpp  blank.hpp  blank_fwd.hpp  circular_buffer.hpp  circular_buffer_fwd.hpp  concept_archetype.hpp  concept_check.hpp  contract.hpp
VoxelBasedGI/includes/glad/: glad.h
VoxelBasedGI/src/: ArcBall.cpp  Camera.cpp  DataHolder.cpp  DeferredRenderer.cpp  Entrypoint.cpp  GeometryBatch.cpp  GeometryManager.cpp  InputManager.cpp  InputSignals.cpp  LightManager.cpp  Material.cpp  Mesh3D.cpp  Object.cpp  Program.cpp  RenderBatch.cpp  Renderer.cpp  Scene.cpp  TextReader.cpp  TextureManager.cpp  TextureReader.cpp  WindowManager.cpp  glad.c
VoxelBasedGI/src/Application/: VoxelBasedGIApp.cpp  VoxelBasedGUI.cpp
VoxelBasedGI/src/Core/: ModelLoader.cpp
VoxelBasedGI/src/VoxelGI/: VoxelManager.cpp
modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
